[gd_scene load_steps=2 format=3 uid="uid://b8jjku5hsubfu"]

[ext_resource type="Script" path="res://scripts/modal_buy_stock.gd" id="1_8nddr"]

[node name="Modal" type="PanelContainer"]
offset_right = 280.0
offset_bottom = 248.0
script = ExtResource("1_8nddr")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LabelStockModal" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Costo Limonada $3 c/u"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainerStock" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer/PanelContainerStock"]
layout_mode = 2
columns = 3

[node name="ModalButtonDownStock" type="Button" parent="MarginContainer/VBoxContainer/PanelContainerStock/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "⬇️"

[node name="ModalLabelPreStock" type="Label" parent="MarginContainer/VBoxContainer/PanelContainerStock/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "0"
horizontal_alignment = 1

[node name="ModalButtonUpStock" type="Button" parent="MarginContainer/VBoxContainer/PanelContainerStock/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "⬆️"

[node name="Spacer3" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 3

[node name="ModalRecipe" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "1 limonada = 2 de azucar + 5 limones + 2 hielos"
horizontal_alignment = 1

[node name="Spacer4" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 3

[node name="ModalButtonBuy" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Comprar $5"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonStart" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Comenzar"

[connection signal="pressed" from="MarginContainer/VBoxContainer/PanelContainerStock/GridContainer/ModalButtonDownStock" to="." method="_on_modal_button_down_stock_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/PanelContainerStock/GridContainer/ModalButtonUpStock" to="." method="_on_modal_button_up_stock_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ModalButtonBuy" to="." method="_on_modal_button_buy_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonStart" to="." method="_on_button_start_pressed"]
